- Add findOwn endpoint to BookController - Implement findOwn in BookService - Enforce owner verification in BookService methods - Add repository method to find books by ids without pagination - Refactor BookService constructor to inject BookRepository